[workspace]
members = [
    "crates/graphics_testing",
    "crates/shader_crate"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'] }

[workspace.dependencies]
kiss3d = "0.41.0"
rapier3d-meshloader = { version = "0.13.0", features = ["stl", "collada", "wavefront"] }
glam = { version = "*", features = ["bytemuck"] }
pollster = "0.4.0"
bytemuck = { version = "*", features = ["derive"]}
rand = "0.10.0"
include_dir = "*"
thiserror = "2.0.18"
# khal
khal = { git = "https://github.com/dimforge/khal.git", rev = "1dd6b842e9dc5a24ec25f1625ec1c1ef07f4cc1c", features = ["derive"] }
khal-builder = { git = "https://github.com/dimforge/khal.git", rev = "1dd6b842e9dc5a24ec25f1625ec1c1ef07f4cc1c" }
khal-std = { git = "https://github.com/dimforge/khal.git", rev = "1dd6b842e9dc5a24ec25f1625ec1c1ef07f4cc1c" }

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3