[package]
name = "graphics_testing"
version.workspace = true
edition.workspace = true

[dependencies]
shader_crate = { path = "../shader_crate/" }
kiss3d.workspace = true
wgpu.workspace = true
glam.workspace = true
pollster.workspace = true
bytemuck.workspace = true
rand.workspace = true
thiserror.workspace = true
hashbrown.workspace = true

[build-dependencies]
spirv-builder.workspace = true

[lints]
workspace = true
