[package]
name = "shader_crate"
version.workspace = true
edition.workspace = true

[dependencies]
khal-std.workspace = true
bytemuck.workspace = true

[target.'cfg(not(any(target_arch = "spirv", target_arch = "nvptx64")))'.dependencies]
khal = { workspace = true, features = ["derive"] }

[lints]
workspace = true
